	* dll_entry.cc: Ditto.
	* getopt.c: Ditto.
	* thread.cc (thread_init_wrapper): Call ExitThread explicitly rather
	than returning, as a preliminary step towards placing per thread info
	at the bottom of the stack.
	* winsup.h: Move per_process class to include/sys/cygwin.h.  Declare
	new dll_crt0().
	* include/cygwin/version.h: Bump API minor version.
	* binmode.c: New file.
	* textmode.c: Ditto.
	* lib/_cygwin_crt0_common.cc: Ditto.
	* lib/crt0.h: Ditto.
	* lib/cygwin_attach_dll.c: Ditto.
	* lib/cygwin_crt0.c: Ditto.
	* lib/dll_entry.cc: Ditto.
	* lib/dll_main.cc: Ditto.
	* lib/getopt.c: Ditto.
	* lib/libcmain.c: Ditto.
	* lib/premain0.c: Ditto.
	* lib/premain1.c: Ditto.
	* lib/premain2.c: Ditto.
	* lib/premain3.c: Ditto.

Wed Jun 28 19:36:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (seteuid): Initialize pi.token before calling
	internal_getlogin().
	* uinfo.cc (internal_getlogin): Use impersonation token instead
	of process token in case of active impersonation. Add some comments.
	(uinfo_init): Initializing myself->token and myself->impersonated
	before calling internal_getlogin(). Add some comments.

Mon Jun 26 18:32:41 2000  Christopher Faylor <cgf@cygnus.com>

	* windows.cc (setitimer): Round up when < 1000 usecs.

Mon Jun 26 17:34:54 2000  Christopher Faylor <cgf@cygnus.com>

	* hinfo.cc (hinfo::dup2): Eliminate compiler warning.

Mon Jun 26 11:25:29 2000  Christopher Faylor <cgf@cygnus.com>

	* hinfo.cc (hinfo::dup2): Guard against out of bounds newfd.

Sat Jun 24 23:43:06 2000  Christopher Faylor <cgf@cygnus.com>

	* grp.cc (read_etc_group): Open file in text mode.
	* pwd.cc (read_etc_passwd): Ditto.
	* shared.h: Bump PROC_MAGIC.

Sat Jun 24 19:30:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fork.cc (fork): Fix error in copying SID pointer.
	* spawn.cc (_spawnve): Ditto.
	* passwd.cc: Remove static from `passwd_in_memory_p'.
	(read_etc_passwd): Remove static.
	* uinfo.cc: Move global declaration of `read_etc_group' and